[workspace]
members = ["rpc-state-reader", "replay"]


# Explicitly set the resolver to the default for edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]
thiserror = "1.0.32"
starknet_api = "0.10.0"
blockifier = { git = "https://github.com/Moonsong-Labs/blockifier", branch = "msl/derive-clone", features = ["testing"] }
tracing = "0.1"
